# Horrified

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  TODO.MD  TODO.md  install.sh  main.cc  project_UML.puml  saving_parameters.md
Horrified/: CMakeLists.txt
Horrified/data/before_game/: items.txt  monster_cards.txt  villagers.txt
Horrified/include/: card_manager.hpp  exceptions.hpp  gui.hpp  location.hpp  utility.hpp
Horrified/src/: gui.cc  monster.cc  system.cc
data/: manual.txt
data/after_game/1/: clues.txt  locations.txt  monster_cards.txt  monsters.txt  perk_cards.txt  util.txt
data/after_game/1/heroes/: archaeologist.txt  courier.txt  mayor.txt  scientist.txt
data/after_game/2/: clues.txt  locations.txt  monster_cards.txt  monsters.txt  perk_cards.txt  util.txt
data/after_game/2/heroes/: archaeologist.txt  courier.txt  mayor.txt  scientist.txt
data/after_game/3/: locations.txt  monster_cards.txt  monsters.txt  perk_cards.txt  util.txt  villagers.txt
data/after_game/3/heroes/: archaeologist.txt  courier.txt  mayor.txt  scientist.txt
data/after_game/4/: clues.txt  locations.txt  monster_cards.txt  monsters.txt  perk_cards.txt  util.txt  villagers.txt
data/after_game/4/heroes/: mayor.txt  scientist.txt
data/after_game/5/: locations.txt  monster_cards.txt  monsters.txt  perk_cards.txt  util.txt
data/after_game/5/heroes/: archaeologist.txt  courier.txt  scientist.txt
data/before_game/: items.txt  locations.txt  monster_cards.txt  perks.txt  villagers.txt
include/: Hero.hpp  card_manager.hpp  gui.hpp  hero.hpp  item_bag.hpp  location.hpp  monster.hpp  monster_card_deck.hpp  pageNumber.hpp  perk_deck.hpp  place.hpp  system.hpp  tui.hpp  utility.hpp  villager.hpp
include/gui/: advanced_page.hpp  defeat_page.hpp  end_game_page.hpp  guide_page.hpp  help_page.hpp  hero_phase_page.hpp  hero_selection_page.hpp  load_match.hpp  monster_page.hpp  move_page.hpp  page_base.hpp  perk_page.hpp  pickup_page.hpp  player_setup_page.hpp  welcome_page.hpp
src/: Hero.cc  exceptions.cc  gui.cc  hero.cc  item_bag.cc  location.cc  monster.cc  monster_card_deck.cc  perk_deck.cc  place.cc  system.cc  tui.cc  utility.cc  villager.cc
src/gui/: advanced_page.cc  defeat_page.cc  end_game_page.cc  guide_page.cc  help_page.cc  hero_phase_page.cc  hero_selection_page.cc  load_match.cc  monster_page.cc  move_page.cc  perk_page.cc  pickup_page.cc  player_setup_page.cc  welcome_page.cc
test/: deck_test.cc
